space.yaml
apiVersion: v1         
kind: Namespace
metadata:
    name: lhernandez
    labels:
      tipo: orquesta
