ingress.yaml
apiVersion: networking.k8s.io/v1                    
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.lhernandez.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: www
            port:
              number: 8080
